Add table grouped by age

--- a/covid19stats.ipynb
+++ b/covid19stats.ipynb
@@ -148,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e374a946acc4f91b19731e20fa3bf42",
+       "model_id": "61290d494d27468a8fdb4340a395f932",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bfe969fce47484cace2b64d864d0eb9",
+       "model_id": "55051ab9a5c94899b992423c1ca4afd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,49 +278,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-04-27</th>\n",
-       "      <td>1124</td>\n",
-       "      <td>32</td>\n",
-       "      <td>122</td>\n",
-       "      <td>157252</td>\n",
-       "      <td>6544</td>\n",
-       "      <td>128782</td>\n",
+       "      <th>2020-05-07</th>\n",
+       "      <td>1165</td>\n",
+       "      <td>7</td>\n",
+       "      <td>97</td>\n",
+       "      <td>168216</td>\n",
+       "      <td>7523</td>\n",
+       "      <td>147124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-04-28</th>\n",
-       "      <td>1414</td>\n",
-       "      <td>20</td>\n",
-       "      <td>82</td>\n",
-       "      <td>158666</td>\n",
-       "      <td>6564</td>\n",
-       "      <td>128864</td>\n",
+       "      <th>2020-05-08</th>\n",
+       "      <td>952</td>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>169168</td>\n",
+       "      <td>7527</td>\n",
+       "      <td>147166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-04-29</th>\n",
-       "      <td>1384</td>\n",
+       "      <th>2020-05-09</th>\n",
+       "      <td>651</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>169819</td>\n",
+       "      <td>7530</td>\n",
+       "      <td>147177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-10</th>\n",
+       "      <td>303</td>\n",
        "      <td>2</td>\n",
-       "      <td>75</td>\n",
-       "      <td>160050</td>\n",
-       "      <td>6566</td>\n",
-       "      <td>128939</td>\n",
+       "      <td>10</td>\n",
+       "      <td>170122</td>\n",
+       "      <td>7532</td>\n",
+       "      <td>147187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-04-30</th>\n",
-       "      <td>1260</td>\n",
-       "      <td>8</td>\n",
-       "      <td>58</td>\n",
-       "      <td>161310</td>\n",
-       "      <td>6574</td>\n",
-       "      <td>128997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-01</th>\n",
-       "      <td>393</td>\n",
+       "      <th>2020-05-11</th>\n",
+       "      <td>386</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>161703</td>\n",
-       "      <td>6575</td>\n",
-       "      <td>129003</td>\n",
+       "      <td>17</td>\n",
+       "      <td>170508</td>\n",
+       "      <td>7533</td>\n",
+       "      <td>147204</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -329,11 +329,11 @@
       "text/plain": [
        "            cases  deaths  recovered  cum_cases  cum_deaths  cum_recovered\n",
        "Meldedatum                                                                \n",
-       "2020-04-27   1124      32        122     157252        6544         128782\n",
-       "2020-04-28   1414      20         82     158666        6564         128864\n",
-       "2020-04-29   1384       2         75     160050        6566         128939\n",
-       "2020-04-30   1260       8         58     161310        6574         128997\n",
-       "2020-05-01    393       1          6     161703        6575         129003"
+       "2020-05-07   1165       7         97     168216        7523         147124\n",
+       "2020-05-08    952       4         42     169168        7527         147166\n",
+       "2020-05-09    651       3         11     169819        7530         147177\n",
+       "2020-05-10    303       2         10     170122        7532         147187\n",
+       "2020-05-11    386       1         17     170508        7533         147204"
       ]
      },
      "execution_count": 7,
@@ -363,13 +363,14 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ebb52e21819461f90fd4a0b098461b4",
+       "model_id": "00dc54185f9a430d9a0051a8b7c413e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,6 +396,160 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The recovered cases should \"lag behind\" by approx. two weeks in the plot above, but it doesn't. That's because the dataset does not have a date indicating when a patient has recovered. Instead the original record seems to be updated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grouped by age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>sick</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Altersgruppe</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A00-A04</th>\n",
+       "      <td>1582</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1320</td>\n",
+       "      <td>261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A05-A14</th>\n",
+       "      <td>3736</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3265</td>\n",
+       "      <td>471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A15-A34</th>\n",
+       "      <td>42401</td>\n",
+       "      <td>15</td>\n",
+       "      <td>38282</td>\n",
+       "      <td>4104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A35-A59</th>\n",
+       "      <td>71153</td>\n",
+       "      <td>324</td>\n",
+       "      <td>65522</td>\n",
+       "      <td>5307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A60-A79</th>\n",
+       "      <td>32248</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>26878</td>\n",
+       "      <td>2996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A80+</th>\n",
+       "      <td>19246</td>\n",
+       "      <td>4819</td>\n",
+       "      <td>11838</td>\n",
+       "      <td>2589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unbekannt</th>\n",
+       "      <td>142</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              cases  deaths  recovered  sick\n",
+       "Altersgruppe                                \n",
+       "A00-A04        1582       1       1320   261\n",
+       "A05-A14        3736       0       3265   471\n",
+       "A15-A34       42401      15      38282  4104\n",
+       "A35-A59       71153     324      65522  5307\n",
+       "A60-A79       32248    2374      26878  2996\n",
+       "A80+          19246    4819      11838  2589\n",
+       "unbekannt       142       0         99    43"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "by_age = rki_cases.groupby(\"Altersgruppe\").apply(complex_sum)\n",
+    "by_age[\"sick\"] = by_age.cases - by_age.deaths - by_age.recovered\n",
+    "by_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cases        170508\n",
+       "deaths         7533\n",
+       "recovered    147204\n",
+       "sick          15771\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "by_age.sum(axis=\"rows\")"
    ]
   }
  ],
