Replace complex_sum() in favor of new columns
The new approach is much faster since the standard sum() function can be
used, which avoids a lot of copying and creating intermediate
dataframes.

--- a/covid19stats.ipynb
+++ b/covid19stats.ipynb
@@ -27,20 +27,13 @@
     "import matplotlib.dates as mdates\n",
     "\n",
     "\n",
-    "def complex_sum(df: pd.DataFrame) -> pd.Series:\n",
-    "    \"\"\"Calculate the sum of cases, deaths, recovered according to algorithm at\n",
-    "    https://www.arcgis.com/home/item.html?id=f10774f1c63e40168479a1feb6c7ca74\n",
+    "def prepare(col: str, refcol: str, df: pd.DataFrame) -> pd.Series:\n",
+    "    \"\"\"Generate a series that can be use with the standar sum() function\n",
+    "    \n",
+    "    The documentation of the dataset specifies that \"AnzahlFall\" and other\n",
+    "    columns should not be simply summed up.\n",
     "    \"\"\"\n",
-    "    def h_sum(col: str, refcol: str) -> int:\n",
-    "        sum = 0\n",
-    "        for idx, row in df.iterrows():\n",
-    "            sum += row[col] if row[refcol] in [0,1] else 0\n",
-    "        return sum\n",
-    "    return pd.Series({\n",
-    "            \"cases\": h_sum(\"AnzahlFall\", \"NeuerFall\"),\n",
-    "            \"deaths\": h_sum(\"AnzahlTodesfall\", \"NeuerTodesfall\"),\n",
-    "            \"recovered\": h_sum(\"AnzahlGenesen\", \"NeuGenesen\")\n",
-    "            })"
+    "    return pd.Series((row[col] if row[refcol] in [0,1] else 0) for _, row in df.iterrows())"
    ]
   },
   {
@@ -67,10 +60,13 @@
    },
    "outputs": [],
    "source": [
-    "rki_cases = pd.read_csv(\"data/RKI_COVID19.csv\")\n",
+    "rki_cases = pd.read_csv(\"data/silo/2020-05-17.csv\")\n",
     "rki_cases[\"Datenstand\"] = pd.to_datetime(rki_cases[\"Datenstand\"], format=\"%d.%m.%Y, %H:%M Uhr\")\n",
     "rki_cases[\"Meldedatum\"] = pd.to_datetime(rki_cases[\"Meldedatum\"], format=\"%Y/%m/%d %H:%M:%S\")\n",
-    "rki_cases[\"Refdatum\"] = pd.to_datetime(rki_cases[\"Refdatum\"], format=\"%Y/%m/%d %H:%M:%S\")"
+    "rki_cases[\"Refdatum\"] = pd.to_datetime(rki_cases[\"Refdatum\"], format=\"%Y/%m/%d %H:%M:%S\")\n",
+    "rki_cases[\"cases\"] = prepare(\"AnzahlFall\", \"NeuerFall\", rki_cases)\n",
+    "rki_cases[\"deaths\"] = prepare(\"AnzahlTodesfall\", \"NeuerTodesfall\", rki_cases)\n",
+    "rki_cases[\"recovered\"] = prepare(\"AnzahlGenesen\", \"NeuGenesen\", rki_cases)"
    ]
   },
   {
@@ -148,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d098fa1e48e54443af9df06498101dad",
+       "model_id": "b16b91f3cc544812b79c54c8dab352eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,7 +157,7 @@
     }
    ],
    "source": [
-    "cases = rki_cases.groupby(\"Bundesland\").apply(complex_sum)\n",
+    "cases = rki_cases.groupby(\"Bundesland\").sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
     "states = pd.merge(cases, destatis[[\"Bundesland\", \"Flaeche\", \"Einwohner\"]], on=\"Bundesland\")\n",
     "states[\"cases/km²\"] = states[\"cases\"]/states[\"Flaeche\"]\n",
     "states[\"cases/inhabitants\"] = states[\"cases\"]/states[\"Einwohner\"]\n",
@@ -194,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87b2c73dfd3c4887aa2916bf1bccdeed",
+       "model_id": "368b892c8cc4492a9c01a91b466dc2e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,8 +204,8 @@
    ],
    "source": [
     "lkr = rki_lkr[[\"county\", \"EWZ\", \"KFL\"]]\n",
-    "cum_lkr = rki_cases.groupby(\"Landkreis\").apply(complex_sum)\n",
-    "counties = pd.merge(lkr, cum_lkr, right_on=\"Landkreis\", left_on=\"county\")\n",
+    "sum_lkr = rki_cases.groupby(\"Landkreis\").sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
+    "counties = pd.merge(lkr, sum_lkr, right_on=\"Landkreis\", left_on=\"county\")\n",
     "counties[\"cases/km²\"] = counties[\"cases\"]/counties[\"KFL\"]\n",
     "counties[\"cases/inhabitants\"] = counties[\"cases\"]/counties[\"EWZ\"]\n",
     "counties[\"deaths/km²\"] = counties[\"deaths\"]/counties[\"KFL\"]\n",
@@ -278,49 +274,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-05-10</th>\n",
-       "      <td>343</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25</td>\n",
-       "      <td>170422</td>\n",
-       "      <td>7807</td>\n",
-       "      <td>151584</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-11</th>\n",
-       "      <td>679</td>\n",
-       "      <td>6</td>\n",
-       "      <td>44</td>\n",
-       "      <td>171101</td>\n",
-       "      <td>7813</td>\n",
-       "      <td>151628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-05-12</th>\n",
        "      <td>837</td>\n",
-       "      <td>6</td>\n",
-       "      <td>48</td>\n",
-       "      <td>171938</td>\n",
-       "      <td>7819</td>\n",
-       "      <td>151676</td>\n",
+       "      <td>7</td>\n",
+       "      <td>75</td>\n",
+       "      <td>171885</td>\n",
+       "      <td>7897</td>\n",
+       "      <td>153358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-05-13</th>\n",
-       "      <td>829</td>\n",
-       "      <td>4</td>\n",
-       "      <td>18</td>\n",
-       "      <td>172767</td>\n",
-       "      <td>7823</td>\n",
-       "      <td>151694</td>\n",
+       "      <td>885</td>\n",
+       "      <td>9</td>\n",
+       "      <td>33</td>\n",
+       "      <td>172770</td>\n",
+       "      <td>7906</td>\n",
+       "      <td>153391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-05-14</th>\n",
-       "      <td>385</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>173152</td>\n",
-       "      <td>7824</td>\n",
-       "      <td>151702</td>\n",
+       "      <td>786</td>\n",
+       "      <td>3</td>\n",
+       "      <td>34</td>\n",
+       "      <td>173556</td>\n",
+       "      <td>7909</td>\n",
+       "      <td>153425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-15</th>\n",
+       "      <td>556</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>174112</td>\n",
+       "      <td>7914</td>\n",
+       "      <td>153432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-16</th>\n",
+       "      <td>243</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>174355</td>\n",
+       "      <td>7914</td>\n",
+       "      <td>153436</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -329,11 +325,11 @@
       "text/plain": [
        "            cases  deaths  recovered  cum_cases  cum_deaths  cum_recovered\n",
        "Meldedatum                                                                \n",
-       "2020-05-10    343       2         25     170422        7807         151584\n",
-       "2020-05-11    679       6         44     171101        7813         151628\n",
-       "2020-05-12    837       6         48     171938        7819         151676\n",
-       "2020-05-13    829       4         18     172767        7823         151694\n",
-       "2020-05-14    385       1          8     173152        7824         151702"
+       "2020-05-12    837       7         75     171885        7897         153358\n",
+       "2020-05-13    885       9         33     172770        7906         153391\n",
+       "2020-05-14    786       3         34     173556        7909         153425\n",
+       "2020-05-15    556       5          7     174112        7914         153432\n",
+       "2020-05-16    243       0          4     174355        7914         153436"
       ]
      },
      "execution_count": 7,
@@ -349,7 +345,7 @@
     "per_day = rki_cases.copy()\n",
     "\n",
     "per_day[datecol] = rki_cases[datecol].dt.floor(\"D\")\n",
-    "per_day = per_day.groupby(datecol).apply(complex_sum)\n",
+    "per_day = per_day.groupby(datecol).sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
     "per_day.sort_values(datecol, inplace=True)\n",
     "per_day[\"cum_cases\"] = per_day[\"cases\"].cumsum()\n",
     "per_day[\"cum_deaths\"] = per_day[\"deaths\"].cumsum()\n",
@@ -370,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccead335d25f4338bae3913ce9b72966",
+       "model_id": "07cb0370644e4dea8bb925e824b3fdd8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0f0b50903984417b54c7de724964b80",
+       "model_id": "f8627857e51243aca2028bb068ed2bb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,7 +453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "122ff29cfc514beeb87fe8ad41b62de3",
+       "model_id": "eaabcd2b257149459cd7eec266045ada",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +475,7 @@
     "    df = rki_cases[rki_cases[\"Bundesland\"] == state].copy()\n",
     "\n",
     "    df[datecol] = rki_cases[datecol].dt.floor(\"D\")\n",
-    "    df = df.groupby(datecol).apply(complex_sum)\n",
+    "    df = df.groupby(datecol).sum()\n",
     "    df.sort_values(datecol, inplace=True)\n",
     "    return df\n",
     "\n",
@@ -555,58 +551,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A00-A04</th>\n",
-       "      <td>1650</td>\n",
+       "      <td>1663</td>\n",
        "      <td>1</td>\n",
-       "      <td>1369</td>\n",
-       "      <td>280</td>\n",
-       "      <td>0.060606</td>\n",
+       "      <td>1401</td>\n",
+       "      <td>261</td>\n",
+       "      <td>0.060132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A05-A14</th>\n",
-       "      <td>3848</td>\n",
+       "      <td>3894</td>\n",
        "      <td>0</td>\n",
-       "      <td>3401</td>\n",
-       "      <td>447</td>\n",
+       "      <td>3488</td>\n",
+       "      <td>406</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A15-A34</th>\n",
-       "      <td>43123</td>\n",
-       "      <td>16</td>\n",
-       "      <td>39525</td>\n",
-       "      <td>3582</td>\n",
-       "      <td>0.037103</td>\n",
+       "      <td>43470</td>\n",
+       "      <td>17</td>\n",
+       "      <td>40030</td>\n",
+       "      <td>3423</td>\n",
+       "      <td>0.039107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A35-A59</th>\n",
-       "      <td>72181</td>\n",
-       "      <td>333</td>\n",
-       "      <td>67188</td>\n",
-       "      <td>4660</td>\n",
-       "      <td>0.461340</td>\n",
+       "      <td>72632</td>\n",
+       "      <td>339</td>\n",
+       "      <td>67840</td>\n",
+       "      <td>4453</td>\n",
+       "      <td>0.466736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A60-A79</th>\n",
-       "      <td>32659</td>\n",
-       "      <td>2473</td>\n",
-       "      <td>27671</td>\n",
-       "      <td>2515</td>\n",
-       "      <td>7.572185</td>\n",
+       "      <td>32834</td>\n",
+       "      <td>2504</td>\n",
+       "      <td>27938</td>\n",
+       "      <td>2392</td>\n",
+       "      <td>7.626241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A80+</th>\n",
-       "      <td>19565</td>\n",
-       "      <td>5001</td>\n",
-       "      <td>12452</td>\n",
-       "      <td>2112</td>\n",
-       "      <td>25.560951</td>\n",
+       "      <td>19734</td>\n",
+       "      <td>5053</td>\n",
+       "      <td>12643</td>\n",
+       "      <td>2038</td>\n",
+       "      <td>25.605554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unbekannt</th>\n",
-       "      <td>126</td>\n",
+       "      <td>128</td>\n",
        "      <td>0</td>\n",
        "      <td>96</td>\n",
-       "      <td>30</td>\n",
+       "      <td>32</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -616,13 +612,13 @@
       "text/plain": [
        "              cases  deaths  recovered  sick  deathrate %\n",
        "Altersgruppe                                             \n",
-       "A00-A04        1650       1       1369   280     0.060606\n",
-       "A05-A14        3848       0       3401   447     0.000000\n",
-       "A15-A34       43123      16      39525  3582     0.037103\n",
-       "A35-A59       72181     333      67188  4660     0.461340\n",
-       "A60-A79       32659    2473      27671  2515     7.572185\n",
-       "A80+          19565    5001      12452  2112    25.560951\n",
-       "unbekannt       126       0         96    30     0.000000"
+       "A00-A04        1663       1       1401   261     0.060132\n",
+       "A05-A14        3894       0       3488   406     0.000000\n",
+       "A15-A34       43470      17      40030  3423     0.039107\n",
+       "A35-A59       72632     339      67840  4453     0.466736\n",
+       "A60-A79       32834    2504      27938  2392     7.626241\n",
+       "A80+          19734    5053      12643  2038    25.605554\n",
+       "unbekannt       128       0         96    32     0.000000"
       ]
      },
      "execution_count": 11,
@@ -631,7 +627,7 @@
     }
    ],
    "source": [
-    "by_age = rki_cases.groupby(\"Altersgruppe\").apply(complex_sum)\n",
+    "by_age = rki_cases.groupby(\"Altersgruppe\").sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
     "by_age[\"sick\"] = by_age.cases - by_age.deaths - by_age.recovered\n",
     "by_age[\"deathrate %\"] = (by_age.deaths / by_age.cases) * 100\n",
     "by_age"
@@ -647,11 +643,11 @@
      "output_type": "stream",
      "text": [
       "overall\n",
-      "   - cases:     173152\n",
-      "   - deaths:    7824\n",
-      "   - recovered: 151702\n",
-      "   - sick:      13626\n",
-      "   - deathrate: 0.045185732766586585\n"
+      "   - cases:     174355\n",
+      "   - deaths:    7914\n",
+      "   - recovered: 153436\n",
+      "   - sick:      13005\n",
+      "   - deathrate: 0.04539015227552981\n"
      ]
     }
    ],
@@ -768,38 +764,38 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>796</td>\n",
-       "      <td>30</td>\n",
-       "      <td>763</td>\n",
+       "      <td>31</td>\n",
+       "      <td>762</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>539</td>\n",
        "      <td>25</td>\n",
-       "      <td>481</td>\n",
+       "      <td>512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>363</td>\n",
-       "      <td>15</td>\n",
-       "      <td>180</td>\n",
+       "      <td>16</td>\n",
+       "      <td>190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>328</td>\n",
-       "      <td>8</td>\n",
-       "      <td>124</td>\n",
+       "      <td>9</td>\n",
+       "      <td>145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>196</td>\n",
+       "      <td>195</td>\n",
        "      <td>6</td>\n",
-       "      <td>32</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>105</td>\n",
+       "      <td>152</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -817,12 +813,12 @@
        "12     1053      11       1042\n",
        "13     1332      30       1300\n",
        "14     1193      47       1138\n",
-       "15      796      30        763\n",
-       "16      539      25        481\n",
-       "17      363      15        180\n",
-       "18      328       8        124\n",
-       "19      196       6         32\n",
-       "20      105       0          4"
+       "15      796      31        762\n",
+       "16      539      25        512\n",
+       "17      363      16        190\n",
+       "18      328       9        145\n",
+       "19      195       6         44\n",
+       "20      152       0          8"
       ]
      },
      "execution_count": 13,
@@ -834,7 +830,7 @@
     "county = \"SK München\"\n",
     "county_data = rki_cases[rki_cases.Landkreis == county].copy()\n",
     "county_data[\"week\"] = county_data[\"Meldedatum\"].apply(lambda d: d.isocalendar()[1])\n",
-    "county_data.groupby(\"week\").apply(complex_sum)"
+    "county_data.groupby(\"week\").sum()[[\"cases\", \"deaths\", \"recovered\"]]"
    ]
   }
  ],
